--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -1,6 +1,6 @@
 # Overview
 
-The Everything Equation is a **lawhood criterion**: a structural condition that a candidate description must satisfy to qualify as an **admissible law** (as opposed to a contingent model, a gauge artifact, a presentation-dependent formalism, or a non-robust construction).
+The Everything Equation is a lawhood criterion: a structural condition that a candidate description must satisfy to qualify as an admissible law (as opposed to a contingent model, a gauge artifact, a presentation-dependent formalism, or a non-robust construction).
 
 It is **not** an equation of motion. It does not introduce new fields by itself. Instead, it specifies a fixed-point requirement under three universal operations:
 
@@ -28,7 +28,7 @@ The result is a compact principle: a lawful structure is one that is **invariant
 
 ## Fixed-point reading
 
-The equation is a **fixed-point condition**. A candidate law 𝓛 is admissible if applying the pipeline “boundary → persistence → closure” returns the same law:
+The equation is a fixed-point condition. A candidate law 𝓛 is admissible if applying the pipeline “boundary → persistence → closure” returns the same law:
 
 1. Start with 𝓛
 2. Apply ∂(𝓛)
@@ -42,7 +42,7 @@ In other words: **admissible law = fixed point of ΩΔ∂**.
 
 # What “closure” means here
 
-In this framework, “closure” is a precise structural idea: **complete the candidate under the admissible transformations of the domain**, so that the result is invariant under re-expression and stable under completion.
+In this framework, “closure” is a precise structural idea: complete the candidate under the admissible transformations of the domain, so that the result is invariant under re-expression and stable under completion.
 
 There are three distinct roles:
 
@@ -55,11 +55,11 @@ There are three distinct roles:
 Δ removes structure that does not persist under the domain’s notion of stabilization.
 
 * In physics, Δ corresponds to persistence under collapse / coarse-graining / record formation: non-persistent structure is filtered out.
-* In mathematics, the analogous role is **inferential persistence**: what survives admissible weakening, proof-environment variation, and re-expression.
+* In mathematics, the analogous role is inferential persistence: what survives admissible weakening, proof-environment variation, and re-expression.
 
 ## 3) Closure completion: Ω
 
-Ω completes the surviving structure under admissible transformations so that the result is globally consistent and stable under re-expression. Categorically, Ω is treated as a **reflective completion**: it maps a candidate to the “closest” closed object satisfying the closure constraints.
+Ω completes the surviving structure under admissible transformations so that the result is globally consistent and stable under re-expression. Categorically, Ω is treated as a reflective completion: it maps a candidate to the “closest” closed object satisfying the closure constraints.
 
 ## Why the three-stage pipeline matters
 
@@ -157,13 +157,13 @@ This path is best if you want to interpret the framework as a fixed-point admiss
 
 ## What is claimed (scope)
 
-* The Everything Equation is a **lawhood criterion**: it defines admissibility as fixed-point stability under ΩΔ∂.
-* The framework is **domain-instantiable**: the operator roles are stable, but their concrete meaning depends on the domain (physics vs mathematics vs information).
-* The program is structured so that claims are backed by **papers**, not by this explainer page.
+* The Everything Equation is a lawhood criterion: it defines admissibility as fixed-point stability under ΩΔ∂.
+* The framework is domain-instantiable: the operator roles are stable, but their concrete meaning depends on the domain (physics vs mathematics vs information).
+* The program is structured so that claims are backed by papers, not by this explainer page.
 
 ## What is not claimed (scope limits)
 
-* This page does **not** claim that a single short equation replaces the Standard Model, GR, or QFT. Existing theories remain the operational content; the framework is about admissibility and selection.
+* We do **not** claim that a single short equation replaces the Standard Model, GR, or QFT. Existing theories remain the operational content; the framework is about admissibility and selection.
 * The framework does **not** claim that every open problem is solved “by definition.” Each resolution must be carried by explicit constructions, derivations, and (where applicable) falsifiers.
 * The framework does **not** claim that every domain necessarily admits the same instantiation of ∂, Δ, and Ω. The roles are fixed; the realizations must be specified and defended.
 
