--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -2,7 +2,7 @@
 
 The Everything Equation is a lawhood criterion: a structural condition that a candidate description must satisfy to qualify as an admissible law (as opposed to a contingent model, a gauge artifact, a presentation-dependent formalism, or a non-robust construction).
 
-It is **not** an equation of motion. It does not introduce new fields by itself. Instead, it specifies a fixed-point requirement under three universal operations:
+It is not an equation of motion. It does not introduce new fields by itself. Instead, it specifies a fixed-point requirement under three universal operations:
 
 * **∂**: boundary normalization (canonical restriction / removal of representation artifacts)
 * **Δ**: persistence filtering (elimination of non-stable structure)
