--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -8,7 +8,7 @@ It is not an equation of motion. It does not introduce new fields by itself. Ins
 * **Δ**: persistence filtering (elimination of non-stable structure)
 * **Ω**: closure completion (reflective completion under admissible re-expression)
 
-The result is a compact principle: a lawful structure is one that is **invariant** under boundary normalization, persistence filtering, and closure completion.
+The result is a compact principle: a lawful structure is one that is invariant under boundary normalization, persistence filtering, and closure completion.
 
 ---
 
