--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -187,7 +187,7 @@ If you want the integrated map of how this program is applied across problems an
 
 ---
 
-## Addendum: what remains after closure — K∞ and the resonance skeleton (CRS*)
+## What remains after closure — K∞ and the resonance skeleton (CRS*)
 
 The Everything Equation identifies admissible laws as fixed points of the composite operator ΩΔ∂. A natural next question is:
 
