Fix MDX parse error (escape braces; preserve math)

--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -376,7 +376,7 @@ Across the series, the nonlinear PDE specifics are pushed into one place: a high
 \]
 ```
 
-where E_{≥j} is a canonized high-frequency tail carrier, D_j is the persistence/dissipation term, N_j is transfer, R_j is a remainder ledger, and T_j is the packet scale.
+where E_&#123;≥j&#125; is a canonized high-frequency tail carrier, D_j is the persistence/dissipation term, N_j is transfer, R_j is a remainder ledger, and T_j is the packet scale.
 
 The point is structural:
 
