--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -245,9 +245,15 @@ An AI (or any formal reader) can treat it as a protocol:
 
 That is the intended “engine + map” structure.
 
+### Primary reference
+
+* **The Tier-0 Framework and the Everything Equation: A Law-Level Closure and Selection Architecture for Physics, Mathematics, and Information**
+  DOI: [10.5281/zenodo.18493638](https://doi.org/10.5281/zenodo.18493638)
+
 ---
 
 ## Related navigation
 
 * Problems: **/problems**
 * Papers: **/papers**
+
