--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -14,11 +14,11 @@ The monograph is built from two complementary pillars that are intentionally des
 
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
-```latex
+latex
 \[
 \mathcal{L} = \Omega \Delta \partial(\mathcal{L})
 \]
-```
+
 
 The Engine treats this as a **law of lawhood**: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
 
@@ -139,11 +139,11 @@ Once those structural requirements are enforced, the remaining degrees of freedo
 
 The resulting field equation is the standard GR + Λ form:
 
-```latex
+latex
 \[
 G_{\mu\nu} + \Lambda g_{\mu\nu} = 8\pi G\,T_{\mu\nu}.
 \]
-```
+
 
 In the monograph’s framing, this is not treated as “a postulate.” It is treated as the unique closure-stable universal interaction under the Tier–0 admissibility pipeline in four dimensions.
 
@@ -256,4 +256,5 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
