--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -14,9 +14,12 @@ The monograph is built from two complementary pillars that are intentionally des
 
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
+
 \[
-\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
+\mathcal&#123;L&#125; = \Omega \Delta \partial(\mathcal&#123;L&#125;)
 \]
+
+
 
 The Engine treats this as a **law of lawhood**: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
 
@@ -138,8 +141,9 @@ Once those structural requirements are enforced, the remaining degrees of freedo
 The resulting field equation is the standard GR + Λ form:
 
 \[
-G_{\mu\nu} + \Lambda g_{\mu\nu} = 8\pi G\,T_{\mu\nu}.
+G_&#123;\mu\nu&#125; + \Lambda g_&#123;\mu\nu&#125; = 8\pi G\,T_&#123;\mu\nu&#125;.
 \]
+
 
 In the monograph’s framing, this is not treated as “a postulate.” It is treated as the unique closure-stable universal interaction under the Tier–0 admissibility pipeline in four dimensions.
 
@@ -251,4 +255,5 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
