--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -1,6 +1,6 @@
-This monograph is the **cornerstone** of the Everything Equation research program: a single integrated document that (i) states the Tier–0 framework in full and (ii) maps its consequences across physics, mathematics, and related domains.
+This monograph is the cornerstone of the Everything Equation research program: a single integrated document that (i) states the Tier–0 framework in full and (ii) maps its consequences across physics, mathematics, and related domains.
 
-It is written as a **complete-work spine**, not as a standalone “paper among papers.” If you only read one document on this site, read this one.
+It is written as a complete-work spine, not as a standalone “paper among papers.” If you only read one document on this site, read this one.
 
 ---
 
@@ -19,7 +19,7 @@ The Engine formalizes a Tier–0 operator architecture in which admissible laws 
 
 
 
-The Engine treats this as a **law of lawhood**: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
+The Engine treats this as a law of lawhood: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
 
 Beyond the core closure rule, the Engine introduces:
 
@@ -34,7 +34,7 @@ Beyond the core closure rule, the Engine introduces:
 
 The Map applies a Tier–0 closure protocol to build a **closure-complete structural map of reality**: a registry of canonical fields, interaction graphs, monotonicity and conservation budgets, and a unified carrier in which GR and QM appear as complementary projections rather than contradictory foundations.
 
-The Map is not “a model.” It is a **constraint atlas**: what is admitted, what is excluded, and what remains underdetermined is made explicit and localized into named tie-break nodes.
+The Map is not “a model.” It is a constraint atlas: what is admitted, what is excluded, and what remains underdetermined is made explicit and localized into named tie-break nodes.
 
 ### Part III — Bridges (integration and cross-reference)
 
@@ -52,7 +52,7 @@ It aims to do three things simultaneously:
 2. **Show power through explicit anchor derivations**, not only philosophical claims.
 3. **Provide an executable reading map** so a reader (or an AI) can move from “principle” to “resolved structure” to “supporting papers” without losing coherence.
 
-The rest of the site—Problems and Papers—are the expansion of this monograph into a navigable research library.
+The rest of the site Problems and Papers are the expansion of this monograph into a navigable research library.
 
 * Problems: **/problems**
 * Papers: **/papers**
@@ -92,7 +92,7 @@ This document is long by design. Here are stable entry points.
 * The structural map: registry, budgets, regimes, interaction graph, tie-break nodes
 * High-level rigidity program structure and where technical lemmas are delegated
 
-### Problems (/problems)
+### Problems 
 
 Problems are the public-facing organization of the program. Each Problem page states:
 
@@ -101,7 +101,7 @@ Problems are the public-facing organization of the program. Each Problem page st
 * what technical objects/papers support it,
 * what remains open or delegated.
 
-### Papers (/papers)
+### Papers 
 
 Papers are the ground truth for details:
 
@@ -115,7 +115,7 @@ Papers are the ground truth for details:
 
 ## Anchors Introduced in the Monograph
 
-This page is not meant to reproduce the monograph. But it should show—immediately—that the framework is not just definitional. The monograph contains several explicit anchor-level demonstrations. Here are three that readers commonly use as litmus tests.
+This page is not meant to reproduce the monograph. But it should show immediately that the framework is not just definitional. The monograph contains several explicit anchor-level demonstrations. Here are three that readers commonly use as litmus tests.
 
 ---
 
@@ -150,7 +150,7 @@ In the monograph’s framing, this is not treated as “a postulate.” It is tr
 
 The monograph includes a dedicated “quantum observer universe” development in which the Tier–0 structure is instantiated in the quantum setting.
 
-The core claim of that development is not interpretive—it is structural:
+The core claim of that development is not interpretive it is structural:
 
 * the quantum Everything Equation selects the stable (classical/diagonal) sector as the admissible fixed-point set,
 * superpositions do not satisfy the fixed-point conditions,
@@ -253,6 +253,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
