--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -12,11 +12,11 @@ The monograph is built from two complementary pillars that are intentionally des
 
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
-
+```latex
 \[
 \mathcal&#123;L&#125; = \Omega \Delta \partial(\mathcal&#123;L&#125;)
 \]
-
+```
 
 
 The Engine treats this as a law of lawhood: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
@@ -253,6 +253,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
