--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -14,7 +14,7 @@ The Engine formalizes a Tier–0 operator architecture in which admissible laws 
 
 ```latex
 \[
-\mathcal&#123;L&#125; = \Omega \Delta \partial(\mathcal&#123;L&#125;)
+\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
 \]
 ```
 
@@ -253,6 +253,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
