--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -138,10 +138,11 @@ Once those structural requirements are enforced, the remaining degrees of freedo
 
 The resulting field equation is the standard GR + Λ form:
 
+```latex
 \[
-G_&#123;\mu\nu&#125; + \Lambda g_&#123;\mu\nu&#125; = 8\pi G\,T_&#123;\mu\nu&#125;.
+G_{\mu\nu} + \Lambda g_{\mu\nu} = 8\pi G\,T_{\mu\nu}.
 \]
-
+```
 
 In the monograph’s framing, this is not treated as “a postulate.” It is treated as the unique closure-stable universal interaction under the Tier–0 admissibility pipeline in four dimensions.
 
@@ -253,6 +254,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
