--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -1,4 +1,5 @@
-#
+# Monograph
+
 This monograph is the cornerstone of the Everything Equation research program: a single integrated document that (i) states the Tier–0 framework in full and (ii) maps its consequences across physics, mathematics, and related domains.
 
 It is written as a complete-work spine, not as a standalone “paper among papers.” If you only read one document on this site, read this one.
@@ -255,6 +256,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
