--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -12,6 +12,10 @@ The monograph is built from two complementary pillars that are intentionally des
 
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
+𝓛 = Ω Δ ∂ (𝓛)
+
+## LaTeX form (exact)
+
 ```latex
 \[
 \mathcal{L} = \Omega \Delta \partial(\mathcal{L})
@@ -254,6 +258,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
