--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -12,9 +12,12 @@ The monograph is built from two complementary pillars that are intentionally des
 
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
+<div className="text-center">
 
-##                                                                                     𝓛 = Ω Δ ∂ (𝓛)
+## 𝓛 = Ω Δ ∂ (𝓛)
 
+</div>
+                                                                                
 The Engine treats this as a law of lawhood: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
 
 Beyond the core closure rule, the Engine introduces:
@@ -250,6 +253,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
